--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,2 @@
 [defaults]
-collections_paths = /tmp/semaphore/.ansible/collections:/home/semaphore/.ansible/collections:/usr/share/ansible/collections
+collections_path = /tmp/semaphore/.ansible/collections:/home/semaphore/.ansible/collections:/usr/share/ansible/collections
